--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
         "64": "icons/icon-64.png"
     },
     "permissions": [
+        "alarms",
         "bookmarks",
         "notifications",
         "storage"
